--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/admin/promotion/event/list.jsp=UTF-8
+encoding//WebContent/css/admin/accommodations/list.css=UTF-8
 encoding/<project>=UTF-8
