layout 통일 detail 생성 customerservice쪽 자잘한 수정

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,8 @@
 eclipse.preferences.version=1
 encoding//WebContent/admin/promotion/event/list.jsp=UTF-8
+encoding//WebContent/css/admin/QnA/reg.css=UTF-8
 encoding//WebContent/css/admin/layout.css=UTF-8
+encoding//WebContent/css/admin/notice/detail.css=UTF-8
+encoding//WebContent/css/admin/notice/edit.css=UTF-8
+encoding//WebContent/css/admin/notice/reg.css=UTF-8
 encoding/<project>=UTF-8
