--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,4 +5,5 @@ encoding//WebContent/css/admin/layout.css=UTF-8
 encoding//WebContent/css/admin/notice/detail.css=UTF-8
 encoding//WebContent/css/admin/notice/edit.css=UTF-8
 encoding//WebContent/css/admin/notice/reg.css=UTF-8
+encoding//src/com/teum/filter/CharacterEncodingFilter.java=UTF-8
 encoding/<project>=UTF-8
