notice qna 사용자 페이지 css 수정

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,7 @@ encoding//WebContent/css/admin/notice/detail.css=UTF-8
 encoding//WebContent/css/admin/notice/edit.css=UTF-8
 encoding//WebContent/css/admin/notice/reg.css=UTF-8
 encoding//WebContent/css/notice/list.css=UTF-8
+encoding//WebContent/css/user/QnA.css=UTF-8
 encoding//WebContent/css/user/offer/reg.css=UTF-8
 encoding//src/com/teum/filter/CharacterEncodingFilter.java=UTF-8
 encoding/<project>=UTF-8
